--- a/middleware/auth_config.json
+++ b/middleware/auth_config.json
@@ -8,5 +8,10 @@
     "regex": "^/users/(new|activate|login)$",
     "unauthenticated": true,
     "authenticated": false
+  },
+  {
+    "regex": "^/users/logout$",
+    "authenticated": true,
+    "unauthenticated": false
   }
 ]
