--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       factsfood:
     restart: always
     volumes:
-      - ./docker/data/db:/data/db
+      - ./data/db:/data/db
   ####### Migration #######
   migrations:
     image: nbittich/mongodb-migration:v0.1.0
